Add additional tests and documentation

--- a/website/aci.erb
+++ b/website/aci.erb
@@ -693,6 +693,9 @@
                       <li<%= sidebar_current("docs-aci-resource-rest") %>>
                         <a href="/docs/providers/aci/r/rest.html">aci_rest</a>
                       </li>
+                      <li<%= sidebar_current("docs-aci-resource-rest-managed") %>>
+                        <a href="/docs/providers/aci/r/rest_managed.html">aci_rest_managed</a>
+                      </li>
                       <li<%= sidebar_current("docs-aci-resource-service_redirect_policy") %>>
                         <a href="/docs/providers/aci/r/service_redirect_policy.html">aci_service_redirect_policy</a>
                       </li>
